<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <string name="hello">Choose one of the features below.</string>
    <string name="app_name">Auto-Mobi</string>
    <string name="description_logo">Health Application</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_make">Select Make</string>
    <string name="description_model">Select Model</string>
    <string name="description_location">Locations</string>
    <string name="description_body">Body Type</string>
    <string name="description_min">Min Price(Ksh)</string>
    <string name="description_max">Max Price(Ksh)</string>
    <string name="description_price">Price (Ksh)</string>
    
    <string name="description_transmission">Transmission</string>
    <string name="description_fuel">Fuel Type</string>
    <string name="description_color">Colour</string>
    <string name="description_manufacture">Year of Manufacture</string>
    <string name="description_kilometer">Kilometers Covered</string>
    <string name="description_doors">No.of Doors</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Search</string>
    <string name="title_feature2">Sell</string>
    <string name="title_feature3">Hire</string>
    <string name="title_feature4">Dealers</string>
    <string name="title_feature5">Tips</string>
    <string name="title_feature6">About</string>
    
    <string name="about_intro">Mobi-Auto is an application which will enable people to; 
        Upload and showcase cars they want to sell.
 		Shows locations they can hire cars around Kenya and the locations they can find the nearest vehicle dealers from their mobile devices.</string>
    <string name="about_header">About Us</string>
    <string name="dealer_header">Dealers</string>
    <string name="hire_header">Hire</string>
    <string name="results_headers">Results</string>
    <string name="search_header">Search</string>
    <string name="sell_header">Sell</string>
    <string name="tips_header">Tips</string>
    <string name="upload_header">Upload</string>
    
    <string name="mom_dealers_header">Mombasa Dealers</string>
    <string name="nrb_dealers_header">Nairobi Dealers</string>
    <string name="meru_dealers_header">Meru Dealers</string>
    <string name="mac_dealers_header">Machakos Dealers</string>
    <string name="kis_dealers_header">Kisumu Dealers</string>
    <string name="nak_dealers_header">Nakuru Dealers</string>
    <string name="mal_dealers_header">Malindi Dealers</string>
    <string name="nai_dealers_header">Naivasha Dealers</string>
    
    <string name="search_intro">Search by key word</string>
    <string name="search_title_text">Search Vehicle</string>
    <string name="sell_title_text">Car Details</string>
    <string name="submit_text">Submit</string>
    <string name="send_text">Send</string>
    <string name="reset_text">Reset</string>
    <string name="cancel_text">Cancel</string>
    <string name="search_btn">Search</string>
    <string name="next_text">Next</string>
    <string name="car_hire_title_text">Car hire tips</string>
    <string name="locations">Select a location to view Dealers</string>
    <string name="namepic">Enter name and take picture</string>
    <string name="car_name">Enter the car name: </string>
    <string name="take_picture">Take a picture </string>
    <string name="picture_text">Upload a picture(ie. gif,jpg,png)</string>
    <string name="tip1">How long will you be renting? 
        If it is for less than a week, you will probably do 
        best with a major rental company</string>
    <string name="tip2">Get an idea of what rates are available, 
        but you should also visit the car rental companies Web sites as 
        well they will often offer exclusive discounts, and you will avoid booking fees.</string>
    <string name="tip3">Before you book online, do an Internet search for coupon or 
        promotion codes to put into the booking engine of your car rental company site.</string>
    <string name="tip4">If you are booking online, read the terms and conditions carefully before
         confirming your reservation. If you are booking over the phone, ask the agent about restrictions.</string>

</resources>