<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            android:id="@+id/home_btn"
            style="@style/TitleBarAction"
            android:onClick="onClick"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="@string/tips_header"
            android:textSize="@dimen/text_size_larger" />

        <ImageView style="@style/TitleBarSeparator" />

        <ImageView style="@style/TitleBarSeparator" />

        <ImageView style="@style/TitleBarAction"
            android:id="@+id/search_btn"
            android:onClick="onClick"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back8"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvwphaminfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_hire_title_text"
            android:textColor="#FF00FF" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/tip1"
            android:textColor="@color/title_text_alt"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/tip2"
            android:textColor="@color/title_text_alt"
            android:textSize="15dp" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/tip3"
            android:textColor="@color/title_text_alt"
            android:textSize="15dp" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/tip4"
            android:textColor="@color/title_text_alt"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>