<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background1"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            style="@style/TitleBarLogo"
            android:layout_width="185dp"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/title_logo" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageView style="@style/TitleBarSeparator" />

        <ImageView
            android:id="@+id/search_btn"
            style="@style/TitleBarAction"
            android:onClick="onClick"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/back8"
        android:orientation="vertical"
        android:padding="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/home_btn_feature1"
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_button1"
                android:onClick="onClick"
                android:text="@string/title_feature1"
                android:textSize="15dp" />

            <Button
                android:id="@+id/home_btn_feature2"
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_button2"
                android:onClick="onClick"
                android:text="@string/title_feature2"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/home_btn_feature3"
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_button3"
                android:onClick="onClick"
                android:text="@string/title_feature3"
                android:textSize="15dp" />

            <Button
                android:id="@+id/home_btn_feature4"
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_button4"
                android:onClick="onClick"
                android:text="@string/title_feature4"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/home_btn_feature5"
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_button5"
                android:onClick="onClick"
                android:text="@string/title_feature5"
                android:textSize="15dp" />

            <Button
                android:id="@+id/home_btn_feature6"
                style="@style/HomeButton"
                android:drawableTop="@drawable/home_button6"
                android:onClick="onClick"
                android:text="@string/title_feature6"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>