<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10" />

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            android:id="@+id/home_btn"
            style="@style/TitleBarAction"
            android:onClick="onClick"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="@string/sell_header"
            android:textSize="@dimen/text_size_larger" />

        <ImageView style="@style/TitleBarSeparator" />

        <ImageView
            android:id="@+id/search_btn"
            style="@style/TitleBarAction"
            android:onClick="onClick"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="501dp"
        android:background="@drawable/back8"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell_title_text"
            android:textColor="#FF00FF"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/car_name"
            android:textColor="@color/title_text_alt" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description_price"
                android:textColor="@color/title_text_alt" />

            <EditText
                android:id="@+id/price_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/description_kilometer"
                android:textColor="@color/title_text_alt" />

            <EditText
                android:id="@+id/distance_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/description_location"
                android:textColor="@color/title_text_alt" />

            <Spinner
                android:id="@+id/location_spinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/takePhoto"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="onClick"
                android:text="@string/take_picture" />

            <ImageView
                android:id="@+id/returnedPic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="100dp"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/send_text" />
    </LinearLayout>

</LinearLayout>