<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >
		<ImageView style="@style/TitleBarAction"
            android:id="@+id/home_btn"           
            android:onClick="onClick"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" 
            android:text="@string/sell_header"
            android:textSize="@dimen/text_size_larger"/>
        
		<ImageView style="@style/TitleBarSeparator" />
		
		
        <ImageView style="@style/TitleBarAction"
            android:id="@+id/search_btn"
            android:onClick="onClick"
            android:src="@drawable/title_search" />
    </LinearLayout>

   <LinearLayout 
       android:layout_width="match_parent"
	    android:layout_height="448dp"
	    android:background="@drawable/back8"
	    android:orientation="vertical" >
    <TextView
        android:id="@+id/tvwphaminfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sell_title_text"
        android:textColor="#FF00FF" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll_one"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/title_text_alt"
                    android:text="@string/description_make" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                     />
            </LinearLayout>
	
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/title_text_alt"
                    android:text="@string/description_model" />
                
                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />
            </LinearLayout>
            
            
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:textColor="@color/title_text_alt"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/description_min" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10" >

                    <requestFocus />
                </EditText>

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:textColor="@color/title_text_alt"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description_max" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/title_text_alt"
                    android:text="@string/description_transmission" />

                <Spinner
                    android:id="@+id/trans"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/title_text_alt"
                    android:text="@string/description_color" />

                <Spinner
                    android:id="@+id/colour_spinner"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />
            </LinearLayout>
            
             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title_text_alt"
                    android:layout_weight="1"
                    android:text="@string/description_manufacture" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10" />

            </LinearLayout>
            
              <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:textColor="@color/title_text_alt"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description_kilometer" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/title_text_alt"
                    android:text="@string/description_location" />

                <Spinner
                    android:id="@+id/location_spin"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />

            </LinearLayout>
            
               <LinearLayout
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal" >
                   
                   <Button
                       android:id="@+id/next_btn"
                       android:text="@string/next_text"
                       android:layout_width="0dip"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:onClick="onClick"
                       android:layout_marginTop="10dp"
                       android:orientation="horizontal" />
               </LinearLayout>
            
        </LinearLayout>
        
    </ScrollView>
</LinearLayout>
</LinearLayout>